fixed extra margin around replay stopwatch

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2438,6 +2438,7 @@ key {
 #replayStopwatch {
   color: var(--main-color);
   display: inline-block;
+  margin: 0;
 }
 
 #restartTestButton {
